[tool.poetry]
name = "gridworld"
version = "0.1.0"
description = ""
authors = ["Muthu G <mutgan7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gymnasium = "^0.29.0"
numpy = "^1.25.2"
jupyter = "^1.0.0"
matplotlib = "^3.7.2"
torch = "^2.0.1"
tqdm = "^4.66.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
